--- a/app/views/layouts/hq/partials/_navbar.haml
+++ b/app/views/layouts/hq/partials/_navbar.haml
@@ -1,36 +1,16 @@
 #navbar.navbar.navbar-default
-  %a.navbar-brand{:href => '#'}
+  %a.navbar-brand{:href => hq_dashboard_index_path}
     %i.icon-beer
-    Hierapolis
+    Öğrenci Bilgi Sistemi
   %ul.nav.navbar-nav.pull-right
-    %li.dropdown
-      %a.dropdown-toggle{data: {toggle: 'dropdown'}, :href => '#'}
-        %i.icon-envelope
-        Messages
-        %span.badge 5
-        %b.caret
-      %ul.dropdown-menu
-        %li
-          %a{:href => '#'} New message
-        %li
-          %a{:href => '#'} Inbox
-        %li
-          %a{:href => '#'} Out box
-        %li
-          %a{:href => '#'} Trash
-    %li
-      %a{href: '#'}
-        %i.icon-cog
-        Settings
     %li.dropdown.user
       %a.dropdown-toggle{'data-toggle' => 'dropdown', :href => '#'}
         %i.icon-user
-        %strong John DOE
-        =image_tag 'http://lorempixel.com/output/fashion-q-c-20-20-4.jpg', width: '20px', height: '20px', class: 'img-rounded'
+        %strong= current_admin.email
         %b.caret
       %ul.dropdown-menu
         %li
-          %a{:href => '#'} Edit Profile
-        %li.divider
-        %li
-          =link_to 'Sign out', 'index.html'
+          = link_to 'Çıkış', destroy_admin_session_path
+        -#%li.divider
+        -#%li
+        -#  =link_to 'Sign out', 'index.html'
