#6 teacher resource created

--- a/app/views/layouts/hq/partials/_dock.haml
+++ b/app/views/layouts/hq/partials/_dock.haml
@@ -7,5 +7,6 @@
   %li.launcher
     %i.icon-file-text-alt
     =link_to t('dock.users'), hq_users_path
-
-#beaker{data: {toggle: 'tooltip'}, title: 'Made by lab2023'}
+  %li.launcher
+    %i.icon-file-text-alt
+    =link_to t('dock.teachers'), hq_teachers_path
