--- a/app/views/layouts/hq/partials/_dock.haml
+++ b/app/views/layouts/hq/partials/_dock.haml
@@ -10,3 +10,6 @@
   %li.launcher
     %i.icon-file-text-alt
     =link_to t('dock.teachers'), hq_teachers_path
+  %li.launcher
+    %i.icon-file-text-alt
+    =link_to t('dock.semesters'), hq_semesters_path
