#5 class room resource

--- a/app/views/hq/teachers/show.html.haml
+++ b/app/views/hq/teachers/show.html.haml
@@ -16,7 +16,7 @@
     .panel.panel-default.grid
       .panel-heading
         %i.icon-list.icon-large
-        Verdiği Dersler
+        Öğrencileri
 
       %table.table
         %tbody
