--- a/app/views/layouts/hq/partials/_dock.haml
+++ b/app/views/layouts/hq/partials/_dock.haml
@@ -13,3 +13,6 @@
   %li.launcher
     %i.icon-file-text-alt
     =link_to t('dock.semesters'), hq_semesters_path
+  %li.launcher
+    %i.icon-file-text-alt
+    =link_to t('dock.class_rooms'), hq_class_rooms_path
