--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,8 +1,8 @@
-%h2 Forgot your password?
+%h2 Şifreni mi unuttun ?
 = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = f.error_notification
   .form-inputs
     = f.input :email, :required => true, :autofocus => true
   .form-actions
-    = f.button :submit, "Send me reset password instructions"
+    = f.button :submit, "Şifre Sıfırlama Talimatlarını Gönder"
 = render "devise/shared/links"
