--- a/app/views/layouts/hq/partials/_navbar.haml
+++ b/app/views/layouts/hq/partials/_navbar.haml
@@ -10,7 +10,7 @@
         %b.caret
       %ul.dropdown-menu
         %li
-          = link_to 'Çıkış', destroy_admin_session_path
+          = link_to 'Çıkış', destroy_admin_session_path, method: :delete
         -#%li.divider
         -#%li
         -#  =link_to 'Sign out', 'index.html'
