--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,4 @@
 .jumbotron
   %h1 Yeni Teknolojilerle Paha Biçilemez Sistemler
+  - if current_user.present?
+    = link_to 'Sınıflarım', class_rooms_path, class: 'btn btn-primary btn-lg'
