--- a/app/views/hq/teachers/_form.html.haml
+++ b/app/views/hq/teachers/_form.html.haml
@@ -9,6 +9,7 @@
       .form-inputs
         = f.input :name
         = f.input :email
+        = f.input :calendar, as: :text
 
       .form-actions
         = f.button :submit, class: 'btn btn-default'
