#9 teacher create announcement

--- a/app/views/layouts/teacher/partials/_dock.haml
+++ b/app/views/layouts/teacher/partials/_dock.haml
@@ -10,3 +10,6 @@
   %li.launcher
     %i.icon-file-text-alt
     =link_to t('dock.class_rooms'), teacher_class_rooms_path
+  %li.launcher
+    %i.icon-bullhorn
+    =link_to t('dock.announcements'), teacher_announcements_path
