--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,3 +2,4 @@
   %h1 Yeni Teknolojilerle Paha Biçilemez Sistemler
   - if current_user.present?
     = link_to 'Sınıflarım', class_rooms_path, class: 'btn btn-primary btn-lg'
+    = link_to 'Duyurular', announcements_path, class: 'btn btn-primary btn-lg'
