--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,4 +3,5 @@
   - if current_user.present?
     = link_to 'Sınıflarım', class_rooms_path, class: 'btn btn-primary btn-lg'
     = link_to 'Duyurular', announcements_path, class: 'btn btn-primary btn-lg'
+    = link_to 'Dosyalar', attachments_path, class: 'btn btn-primary btn-lg'
     = link_to 'Çıkış', destroy_user_session_path, class: 'btn btn-danger btn-lg', method: :delete
