--- a/app/views/teacher/class_rooms/_class_room.html.haml
+++ b/app/views/teacher/class_rooms/_class_room.html.haml
@@ -1,4 +1,4 @@
-%tr
+%tr{class: class_room.teacher_id == current_teacher.id ? 'success' : ''}
   %td= class_room.id
   %td= class_room.name
   %td= class_room.teacher.name
