--- a/app/views/teacher/class_rooms/_list.html.haml
+++ b/app/views/teacher/class_rooms/_list.html.haml
@@ -8,7 +8,7 @@
     .badge= @class_rooms.total_entries
 .panel-body.filters
 
-%table.table
+%table.table.table-condensed
   %thead
     %tr
       %th #
